--- a/Mensajes_WhatsApp/Mensajes_WhatsApp.csproj
+++ b/Mensajes_WhatsApp/Mensajes_WhatsApp.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RestSharp" Version="110.2.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
 </Project>
